--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ samples/server/petstore/aspnetcore/.vs/
 samples/chromasdk/chromasdk_CsharpDotNet2/
 samples/chromasdk/chromasdk_csharp/
 modules/swagger-codegen/src/main/resources/csharp_original/
+samples/chromasdk/custom_chromasdk_csharp/
