Added Razer client

--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,4 @@ samples/chromasdk/chromasdk_CsharpDotNet2/
 samples/chromasdk/chromasdk_csharp/
 modules/swagger-codegen/src/main/resources/csharp_original/
 samples/chromasdk/custom_chromasdk_csharp/
+samples/chromasdk/razer_csharp/
