Generate cpp client

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,5 @@ modules/swagger-codegen/src/main/resources/csharp_original/
 samples/chromasdk/custom_chromasdk_csharp/
 samples/chromasdk/razer_csharp/
 samples/chromasdk/razer_delete_csharp/
+samples/chromasdk/chromasdk_cpprest/
+samples/chromasdk/razer_cpprest/
